--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,25 +16,25 @@
           <div class="col-md-2">
             <h1>NaganoCake</h1>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-9">
             <ul class="nav navbar-nav navbar-right">
               <% if customer_signed_in? %>
-                <li class="nav-item">ようこそ、<%= current_customer.last_name %>さん！</li>
-                <li class="nav-item"><%= link_to "マイページ", "#" %></li>
-                <li class="nav-item"><%= link_to "商品一覧", products_path %></li>
-                <li class="nav-item"><%= link_to "カート", cart_products_path %></li>
-                <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
+                <li>ようこそ、<%= current_customer.last_name %>さん！</li>
+                <li><%= link_to "マイページ", "#" %></li>
+                <li><%= link_to "商品一覧", products_path %></li>
+                <li><%= link_to "カート", cart_products_path %></li>
+                <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
               <% elsif admin_signed_in? %>
-                <li class="nav-item"><%= link_to "商品一覧", admin_products_path %></li>
-                <li class="nav-item"><%= link_to "会員一覧", admin_customers_path %></li>
-                <li class="nav-item"><%= link_to "注文履歴一覧", admin_orders_path %></li>
-                <li class="nav-item"><%= link_to "ジャンル一覧", admin_genres_path %></li>
-                <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+                <li><%= link_to "商品一覧", admin_products_path %></li>
+                <li><%= link_to "会員一覧", admin_customers_path %></li>
+                <li><%= link_to "注文履歴一覧", admin_orders_path %></li>
+                <li><%= link_to "ジャンル一覧", admin_genres_path %></li>
+                <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
               <% else %>
-                <li class="nav-item"><%= link_to "About","#" %></li>
-                <li class="nav-item"><%= link_to "商品一覧", products_path %></li>
-                <li class="nav-item"><%= link_to "新規登録", new_customer_registration_path %></li>
-                <li class="nav-item"><%= link_to "ログイン", new_customer_session_path %></li>
+                <li><%= link_to "About","#" %></li>
+                <li><%= link_to "商品一覧", products_path %></li>
+                <li><%= link_to "新規登録", new_customer_registration_path %></li>
+                <li><%= link_to "ログイン", new_customer_session_path %></li>
               <% end %>  
             </ul>
           </div>
