--- a/app/views/public/genres/_genre_search.html.erb
+++ b/app/views/public/genres/_genre_search.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>ジャンル検索</th>
@@ -8,7 +8,7 @@
     <% genres.each do |genre| %>
       <tr>
         <td>
-          <%= link_to genre.name, search_path('search[value]': genre.id) %>
+          <%= link_to genre.name, search_products_path('value': genre.id) %>
         </td>
       </tr>
     <% end %>
