--- a/app/views/public/products/search.html.erb
+++ b/app/views/public/products/search.html.erb
@@ -9,15 +9,17 @@
         <h4>該当する商品はありません</h4>
       <% end %>
       <!--部分テンプレート？-->
+      <div class="row">
         <% @products.each do |product| %>
-          <div class="pull-left mx-3">
+          <div class="col-md-3">
             <%= link_to product_path(product) do %>
-              <%= attachment_image_tag(product, :image, size: '150x180', fallback: "no_image.png") %><br />
+              <%= attachment_image_tag(product, :image, size: '200x200', fallback: "no_image.png") %><br />
               <%= product.name %><br />
             <% end %>
             ¥<%= product.tax_on.to_s(:delimited) %>
           </div>
         <% end %>
+      </div>
       <!--ここまで-->
     </div>
   </div>
