--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,24 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+header {
+  height: 120px;
+  margin: 10px 10px 0 10px;
+  border: 1px solid gray;
+}
+.logo {
+  padding-top: 20px;
+  padding-left: 60px;
+}
+.links {
+  margin-top: 35px;
+}
+.links li {
+  margin: 0 20px;
+  border: 1px solid gray;
+}
+#customer-name {
+  border: none;
+  line-height: 50px;
+}
