--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
 
   <body>
     
-    <header class="navbar">
-      <div class="container">
+    <header>
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 logo">
             <h1>NaganoCake</h1>
           </div>
-          <div class="col-md-9">
-            <ul class="nav navbar-nav navbar-right">
+          <div class="col-md-7 col-md-offset-3">
+            <ul class="nav navbar-nav links">
               <% if customer_signed_in? %>
-                <li>ようこそ、<%= current_customer.last_name %>さん！</li>
-                <li><%= link_to "マイページ", "#" %></li>
+                <li id="customer-name">ようこそ、<%= current_customer.last_name %>さん！</li>
+                <li><%= link_to "マイページ", my_page_customers_path %></li>
                 <li><%= link_to "商品一覧", products_path %></li>
                 <li><%= link_to "カート", cart_products_path %></li>
                 <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
