--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,11 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-offset-1 col-xs-3">
-      <table class="table">
-       <tr class="active">
-       <th><h4><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4></th>
-       </tr>
-       </table>
+       <h4 class="header-background"><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4>
     </div>
     <div class="col-xs-offset-1 col-xs-8">
        <table class="table">
