--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,11 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
-      <table class="table">
-      <tr class="active">
-        <th><h4>管理者画面</h4></th>
-        </tr>
-      </table>
+        <h4 class="header-background">管理者画面</h4>
+        
       <body>
       <h3>
         <span>本日の注文件数</span>
