--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-12">
       <div class="pull-left margin-bottom">
-        <h4>ショッピングカート</h4>
+        <h4 class="header-background">ショッピングカート</h4>
       </div>
+      
       <div class="pull-right margin-bottom">
         <%= link_to destroy_all_cart_products_path, method: :delete do %>
           <span class="btn btn-danger">カートを空にする</span>
@@ -18,57 +19,35 @@
             <th>小計</th>
             <th></th>
           </tr>
-      </thead>
-              <% @cart_products.each do |cart_product| %>
-                <tbody>
-                    <tr>
-                        <td>
-                            <%= attachment_image_tag cart_product.product, :image, fallback: "no_image.png", size:'50x50' %>
-                            <%= cart_product.product.name %>
-                        </td>
-                        <td>
-                            <%= cart_product.product.tax_on %>
-                        </td>
-                        <td>
-                            <%= form_for cart_product do |f| %>
-                            <%= f.number_field :amount, max: 10 %>
-                            <%= f.submit "変更", class: "btn btn-info" %>
-                            <% end %>
-                        </td>
-                        <td>
-                            <%= cart_product.tax_on_price %>
-                        </td>
-                        <td>
-                            <%= link_to "削除する", cart_product_path(cart_product), class: "btn btn-danger btn-md", method: :delete %>
-                        </td>
-                    </tr>
-                </tbody>
-              <% end %>
-            </table>
-            <div class="col-xs-9 margin-bottom">
+        </thead>
+              <%= render 'public/cart_products/cart', cart_products: @cart_products %>
+      </table>
+            <div class="row">
+            <div class="col-xs-3 margin-bottom">
               <%= link_to products_path do %>
               <span class="btn btn-info glyphicon glyphicon-chevron">買い物を続ける</span>
               <% end %>
             </div>
             <tr>
             <td>
-                  <div class="col-md-4 col-md-offset-4 text-left">
+                  <div class="col-md-3 col-md-offset-6 text-left">
                     <table class="table table-bordered">
-                      <tbody>
-                        <td>
+                      <tr class="row">
+                        <td class="col-xs-5">
                           合計金額
                         </td>
-                        <td>
+                        <td class="col-xs-7">
                           <%= current_customer.cart_total_price %>
                         </td>
-                      </tbody>
+                      </tr>
                     </table>
                   </div>
             </td>
             </tr>
             </table>
+            </div>
             <div class="col-md-4 col-md-offset-4 text-center">
-              <%= link_to " 情報入力に進む", orders_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
+              <%= link_to " 情報入力に進む", new_order_path, class: "glyphicon glyphicon-pencil btn btn-success" %>
             </div>
         </div>
     </div>
