--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h4>配送先登録/一覧</h4>
+            <h4 class="header-background">配送先登録/一覧</h4>
             <%= form_for (@delivery) do |f| %>
             <table class="table table-hover">
             <tr>
